--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario de Contacto</title>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"
+    ></script>
     <style>
       * {
         margin: 0;
@@ -217,13 +221,20 @@
             id="name"
             name="name"
             autocomplete="off"
+            placeholder="Juan Pérez"
             required
           />
         </div>
 
         <div class="form-group">
           <label for="email">Correo electrónico *</label>
-          <input type="email" id="email" name="email" required />
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="mimail@ejemplo.com"
+            required
+          />
         </div>
 
         <div class="form-group">
@@ -315,6 +326,12 @@
         messageDiv.style.display = "block";
 
         if (type === "success") {
+          confetti({
+            particleCount: 100,
+            spread: 70,
+            origin: { y: 0.6 },
+          });
+
           setTimeout(() => {
             messageDiv.style.display = "none";
           }, 5000);
